# Final-Project-JEM207

./: Blbosti.py  Films0.csv  Films1.csv  Films2.csv  Individuals.csv  Individuals0.csv  Individuals1.csv  Individuals2.csv  Individuals3.csv  Oscar_films.csv  Oscars_individuals.csv  Plan.md  Plan.txt  Progress.ipynb  README.md  Statistical_analysis.ipynb  list_films_right.csv  list_films_wrong.csv  pandas.txt  test.csv
.ipynb_checkpoints/: Progress-checkpoint.ipynb  Statistical_analysis-checkpoint.ipynb
Complete data/: Individuals.csv
Package_OscarScrapper/: Example.ipynb  LICENSE.txt  MANIFEST.in  Oscarscrapper.py  Progress.ipynb  README.md  setup.cfg  setup.py
Package_OscarScrapper/data/: Films0.csv  Films1.csv  Films2.csv  Individuals0.csv
Package_OscarScrapper/data/correction/: list_films_wrong.csv
Package_OscarScrapper/data/corrections/: list_films_right.csv  list_names_right.csv  list_names_wrong.csv
Package_OscarScrapper/src/Oscarscrapper_package/: Oscarscrapper.py
Package_OscarScrapper/src/Oscarscrapper_package/corrections/: list_films_right.csv  list_films_wrong.csv
Package_OscarScrapper/tests/: Example.ipynb
