[metadata]
name = OscarScrapper-AUBINEAUBOZON
version = 0.0.1
author = Yann Aubineau, Samuel Bozon
author_email = yann.aubineau@gmail.com, samuel.bozon@gmail.com
description = ///


url = https://github.com/omasamo/Final-Project-JEM207

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src